--- a/analysis/regionAnalysis.Rmd
+++ b/analysis/regionAnalysis.Rmd
@@ -27,6 +27,8 @@ library(dplyr)
 library(patchwork)
 library(tibble)
 library(grid)
+library(ggupset)
+library(ggpubr)
 library(TxDb.Hsapiens.UCSC.hg19.knownGene)
 source(here("code/utility.R"))
 ```
@@ -121,7 +123,7 @@ p
 ```
 
 ```{r}
-fig <- here("output/figures/Fig-5A.rds")
+fig <- here("output/figures/Fig-5B.rds")
 saveRDS(p, fig, compress = FALSE)
 ```
 
@@ -209,7 +211,7 @@ for(i in 1:length(dmrList)){
 }
 ```
 
-```{r}
+```{r, fig.width=9, fig.height=7}
 p <- vector("list", length(bDat))
 
 for(i in 1:length(p)){
@@ -229,14 +231,14 @@ p[[i]] <- ggplot(bDat[[i]], aes(x = avgbias, y = propDM)) +
 ```
 
 ```{r}
-fig <- here("output/figures/Fig-5B.rds")
+fig <- here("output/figures/Fig-5A.rds")
+saveRDS(p[[3]], fig, compress = FALSE)
+
+fig <- here("output/figures/SFig-11A.rds")
 saveRDS(p[[1]], fig, compress = FALSE)
 
-fig <- here("output/figures/SFig-9A.rds")
+fig <- here("output/figures/SFig-12A.rds")
 saveRDS(p[[2]], fig, compress = FALSE)
-
-fig <- here("output/figures/SFig-10A.rds")
-saveRDS(p[[3]], fig, compress = FALSE)
 ```
 
 ### Compare GOregion with other approaches
@@ -246,116 +248,18 @@ immuneGO <- unique(read.csv(here("data/GO-immune-system-process.txt"),
                             stringsAsFactors = FALSE, header = FALSE, 
                             col.names = "GOID"))
 
-dmrGo %>% arrange(contrast, method, P.DE) %>%
-    filter(method %in% c("goana", "goregion-gometh")) %>%
-    mutate(method = unname((dict[method]))) %>%
-    group_by(contrast, method) %>%
-    mutate(csum = cumsum(GO %in% immuneGO$GOID)) %>%
-    mutate(rank = 1:n()) %>%
-    filter(rank <= 100) -> dat
-
-p <- ggplot(dat, aes(x = rank, y = csum, colour = method)) +
-    geom_line() +
-    facet_wrap(vars(contrast), ncol=3) +
-    geom_vline(xintercept = 10, linetype = "dotted") +
-    labs(colour = "Method", x = "Rank", y = "Cumulative no. immune sets") +
-    theme(legend.position = "bottom") +
-    scale_color_manual(values = methodCols)
-p
-```
-
-```{r}
 rnaseqGO <- readRDS(here("data/RNAseq-GO.rds"))
 rnaseqGO %>% group_by(contrast) %>%
     mutate(rank = 1:n()) %>%
     filter(rank <= 100) -> topGOSets
-    
-dat %>% arrange(contrast, method, P.DE) %>%
+
+dmrGo %>% arrange(contrast, method, P.DE) %>%
+    filter(method %in% c("goana", "goregion-gometh")) %>%
+    mutate(method = unname((dict[method]))) %>%
     group_by(contrast, method) %>%
-    mutate(csum = cumsum(GO %in% topGOSets$ID[topGOSets$contrast %in% contrast])) %>%
     mutate(rank = 1:n()) %>%
-    filter(rank <= 100) -> sub
+    filter(rank <= 100) -> dat
 
-p <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
-    geom_line() +
-    facet_wrap(vars(contrast), ncol=3) +
-    geom_vline(xintercept = 10, linetype = "dotted") +
-    labs(colour = "Method", x = "Rank", 
-         y = glue("Cumulative no. RNAseq sets")) +
-    theme(legend.position = "bottom") +
-    scale_color_manual(values = methodCols)
-p
-```
-
-```{r, echo=FALSE}
-# library(ROCR)
-# dat %>% arrange(contrast, method, P.DE) %>%
-#     group_by(contrast, method) %>%
-#     mutate(FDR = p.adjust(P.DE, method = "BH")) %>%
-#     mutate(rna = as.numeric(GO %in% topGOSets$ID[topGOSets$contrast %in% 
-#                                                      contrast])) %>%
-#     mutate(isp = as.numeric(GO %in% immuneGO$GOID)) %>%
-#     mutate(rank = 1:n()) %>%
-#     filter(rank <= 100) -> sub
-# 
-# rocDat <- NULL
-# aucDat <- NULL
-# for(c in 1:length(unique(sub$contrast))){
-#     cont <- sort(unique(sub$contrast))[c]
-#     
-#     for(m in 1:length(unique(sub$method))){
-#         meth <- sort(unique(sub$method))[m]
-#         
-#         preds <- -log10(sub$FDR[sub$contrast == cont & sub$method == meth])
-#         labr <- sub$rna[sub$contrast == cont & sub$method == meth]
-#         labi <- sub$isp[sub$contrast == cont & sub$method == meth]
-#         
-#         pred <- prediction(preds, labr)
-#         tmp <- performance(pred,'tpr','fpr')
-#         tib <- tibble(x = tmp@x.values[[1]],
-#                       y = tmp@y.values[[1]],
-#                       contrast = cont,
-#                       method = meth,
-#                       truth = "RNAseq")
-#         rocDat <- bind_rows(rocDat, tib)
-#         tib <- tibble(auc = performance(pred,'auc')@y.values[[1]],
-#                       contrast = cont,
-#                       method = meth,
-#                       truth = "RNAseq")
-#         aucDat <- bind_rows(aucDat, tib)
-#         
-#         pred <- prediction(preds, labi)
-#         tmp <- performance(pred,'tpr','fpr')
-#         tib <- tibble(x = tmp@x.values[[1]],
-#                       y = tmp@y.values[[1]],
-#                       contrast = cont,
-#                       method = meth,
-#                       truth = "ISP")
-#         rocDat <- bind_rows(rocDat, tib)
-#         tib <- tibble(auc = performance(pred,'auc')@y.values[[1]],
-#                       contrast = cont,
-#                       method = meth,
-#                       truth = "ISP")
-#         aucDat <- bind_rows(aucDat, tib)
-#         
-#     }
-# }
-# 
-# r <- ggplot(rocDat, aes(x, y, colour = method)) +
-#     geom_line(aes(linetype = truth)) +
-#     facet_wrap(vars(contrast)) +
-#     labs(x = "FPR", y = "TPR", colour = "Method", linetype = "Truth set")
-# 
-# a <- ggplot(aucDat, aes(x = truth, y = auc, fill = method)) +
-#     geom_bar(stat = "identity", position = "dodge") +
-#     facet_wrap(vars(contrast)) +
-#     labs(x = "Truth set", y = "AUC", fill = "Method")
-# 
-# r / a
-```
-
-
-```{r}
 p <- vector("list", length(unique(dat$contrast)))
 
 for(i in 1:length(p)){
@@ -364,28 +268,26 @@ for(i in 1:length(p)){
     dat %>% filter(contrast == cont) %>%
         arrange(method, P.DE) %>%
         group_by(method) %>%
-        mutate(rank = 1:n()) %>%
-        filter(rank <= 100) %>%
-        summarise(prop = sum(GO %in% immuneGO$GOID)/n()) %>%
+        mutate(csum = cumsum(GO %in% immuneGO$GOID)) %>%
         mutate(truth = "ISP Terms") -> immuneSum
     
     dat %>% filter(contrast == cont) %>%
         arrange(method, P.DE) %>%
         group_by(method) %>%
-        mutate(rank = 1:n()) %>%
-        filter(rank <= 100) %>%
-        summarise(prop = sum(GO %in% topGOSets$ID[topGOSets$contrast %in% 
-                                                      cont])/n()) %>%
+        mutate(csum = cumsum(GO %in% topGOSets$ID[topGOSets$contrast %in% 
+                                                      contrast])) %>%
         mutate(truth = "RNAseq Terms") -> rnaseqSum
     
     truthSum <- bind_rows(immuneSum, rnaseqSum)
     
-    p[[i]] <- ggplot(truthSum, aes(x = truth, y = prop, fill = method)) + 
-        geom_bar(stat = "identity", position = "dodge") +
-        labs(fill = "Method", 
-             x = "Truth set", 
-             y = "Prop. top 100 terms in truth set") +
-        scale_fill_manual(values = methodCols) +
+    p[[i]] <- ggplot(truthSum, aes(x = rank, y = csum, colour = method)) +
+    geom_line() +
+        facet_wrap(vars(truth)) +
+    geom_vline(xintercept = 10, linetype = "dotted") +
+    labs(colour = "Method", x = "Rank", 
+         y = glue("Cumulative no. RNAseq sets")) +
+    theme(legend.position = "bottom") +
+    scale_color_manual(values = methodCols) +
         ggtitle(cont)
 }
 
@@ -398,16 +300,16 @@ p[[3]]
 fig <- here("output/figures/Fig-5C.rds")
 saveRDS(p[[1]], fig, compress = FALSE)
 
-fig <- here("output/figures/SFig-9B.rds")
+fig <- here("output/figures/SFig-11B.rds")
 saveRDS(p[[2]], fig, compress = FALSE)
 
-fig <- here("output/figures/SFig-10B.rds")
+fig <- here("output/figures/SFig-12B.rds")
 saveRDS(p[[3]], fig, compress = FALSE)
 ```
 
 Examine what the top 10 ranked gene sets are and how many genes they contain, for each method and comparison.
 
-```{r, fig.height=7, fig.width=6}
+```{r}
 terms <- missMethyl:::.getGO()$idTable
 nGenes <- rownames_to_column(data.frame(n = sapply(missMethyl:::.getGO()$idList, 
                                                    length)), 
@@ -421,8 +323,11 @@ dat %>% arrange(contrast, method, P.DE) %>%
     inner_join(nGenes, by = c("GO" = "ID")) -> sub
 ```
 
-```{r, width = 8, height = 5, message=FALSE, warning=FALSE}
+```{r}
 p <- vector("list", length(unique(sub$contrast)))
+truthPal <- scales::hue_pal()(4)
+names(truthPal) <- c("Both", "ISP", "Neither", "RNAseq")
+
 for(i in 1:length(p)){
     cont <- sort(unique(sub$contrast))[i]
     sub %>% filter(contrast == cont) %>%
@@ -439,17 +344,19 @@ for(i in 1:length(p)){
                    col = ifelse(both == 2, "Both", 
                                 ifelse(both == 1 & rna == 1, "RNAseq",
                                        ifelse(both == 1 & isp == 1, 
-                                              "ISP", "Neither")))) -> tmp
+                                              "ISP", "Neither")))) %>%
+        mutate(col = factor(col, 
+                            levels = c("Both", "ISP", "RNAseq", 
+                                       "Neither"))) -> tmp
     
     p[[i]] <- ggplot(tmp, aes(x = -log10(FDR), y = idx, colour = col)) +
         geom_point(aes(size = n), alpha = 0.7) +
         scale_size(limits = c(min(sub$n), max(sub$n))) +
         facet_wrap(vars(method), ncol = 2, scales = "free") +
         scale_y_discrete(labels = setLabs) +
-        scale_color_manual(values = scales::hue_pal()(4)[c(3,1,4)]) +
+        scale_colour_manual(values = truthPal) +
         labs(y = "", size = "No. genes", colour = "In truth set") +
-        theme(axis.text.y = element_text(size = 6),
-              axis.text.x = element_text(size = 6),
+        theme(axis.text = element_text(size = 8),
               legend.box = "vertical",
               legend.position = "bottom",
               legend.margin = margin(0, 0, 0, 0, unit = "lines"),
@@ -468,120 +375,89 @@ shift_legend(p[[3]], plot = TRUE, pos = "left")
 fig <- here("output/figures/Fig-5D.rds")
 saveRDS(p[[1]], fig, compress = FALSE)
 
-fig <- here("output/figures/SFig-9C.rds")
+fig <- here("output/figures/SFig-11C.rds")
 saveRDS(p[[2]], fig, compress = FALSE)
 
-fig <- here("output/figures/SFig-10C.rds")
+fig <- here("output/figures/SFig-12C.rds")
 saveRDS(p[[3]], fig, compress = FALSE)
 ```
 
 ### Compare GOregion with probe-wise analysis
 
 ```{r}
-dmrGo %>% arrange(contrast, method, P.DE) %>%
-    filter(method %in% c("goregion-gometh", "gometh-probe-top", 
+dmrGo %>% filter(method %in% c("goregion-gometh", "gometh-probe-top", 
                          "gometh-probe-fdr")) %>%
-    mutate(method = unname((dict[method]))) %>%
+    mutate(method = unname((dict[method]))) %>% 
+    arrange(contrast, method, P.DE) %>%
     group_by(contrast, method) %>%
     mutate(csum = cumsum(GO %in% immuneGO$GOID)) %>%
     mutate(rank = 1:n()) %>%
-    filter(rank <= 100) -> dat
+    filter(rank <= 100) -> sub
 
-p <- ggplot(dat, aes(x = rank, y = csum, colour = method)) +
+p1 <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
     geom_line() +
     facet_wrap(vars(contrast), ncol=3) +
     geom_vline(xintercept = 10, linetype = "dotted") +
     labs(colour = "Method", x = "Rank", y = "Cumulative no. immune sets") +
     theme(legend.position = "bottom") +
     scale_color_manual(values = methodCols)
-p
 ```
 
-```{r}
-dat %>% arrange(contrast, method, P.DE) %>%
+```{r, fig.height=7, fig.width=9}
+dmrGo %>% filter(method %in% c("goregion-gometh", "gometh-probe-top", 
+                         "gometh-probe-fdr")) %>%
+    mutate(method = unname((dict[method]))) %>% 
+    arrange(contrast, method, P.DE) %>%
     group_by(contrast, method) %>%
-    mutate(csum = cumsum(GO %in% topGOSets$ID[topGOSets$contrast %in% contrast])) %>%
+    mutate(csum = cumsum(GO %in% topGOSets$ID[topGOSets$contrast %in% 
+                                                  contrast])) %>%
     mutate(rank = 1:n()) %>%
     filter(rank <= 100) -> sub
 
-p <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
+p2 <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
     geom_line() +
-    facet_wrap(vars(contrast), ncol=3) +
+    facet_wrap(vars(contrast), ncol=3, scales = "free_y") +
     geom_vline(xintercept = 10, linetype = "dotted") +
-    labs(colour = "Method", x = "Rank", 
-         y = glue("Cumulative no. RNAseq sets")) +
-    theme(legend.position = "bottom") +
+    labs(colour = "Method", x = "Rank", y = "Cumulative no. RNAseq sets") +
+    theme(legend.position = "bottom") + 
     scale_color_manual(values = methodCols)
-p
+
+p3 <- p1 / p2 + 
+    plot_layout(guides = "collect") & 
+    theme(legend.position = "bottom")
+p3
 ```
 
-```{r}
-p <- vector("list", length(unique(dat$contrast)))
-
-for(i in 1:length(p)){
-    cont <- sort(unique(dat$contrast))[i]
-    
-    dat %>% filter(contrast == cont) %>%
-        arrange(method, P.DE) %>%
-        group_by(method) %>%
-        mutate(rank = 1:n()) %>%
-        filter(rank <= 100) %>%
-        summarise(prop = sum(GO %in% immuneGO$GOID)/n()) %>%
-        mutate(truth = "ISP Terms") -> immuneSum
-    
-    dat %>% filter(contrast == cont) %>%
-        arrange(method, P.DE) %>%
-        group_by(method) %>%
-        mutate(rank = 1:n()) %>%
-        filter(rank <= 100) %>%
-        summarise(prop = sum(GO %in% topGOSets$ID[topGOSets$contrast %in% 
-                                                      cont])/n()) %>%
-        mutate(truth = "RNAseq Terms") -> rnaseqSum
-    
-    truthSum <- bind_rows(immuneSum, rnaseqSum)
-    
-    p[[i]] <- ggplot(truthSum, aes(x = truth, y = prop, fill = method)) + 
-        geom_bar(stat = "identity", position = "dodge") +
-        labs(fill = "Method", 
-             x = "Truth set", 
-             y = "Prop. top 100 terms in truth set") +
-        scale_fill_manual(values = methodCols) +
-        ggtitle(cont)
-}
-
-p[[1]]
-p[[2]]
-p[[3]]
-```
 
 ```{r}
-# fig <- here("output/figures/Fig-5C.rds")
-# saveRDS(p[[1]], fig, compress = FALSE)
-# 
-# fig <- here("output/figures/SFig-9B.rds")
-# saveRDS(p[[2]], fig, compress = FALSE)
-# 
-# fig <- here("output/figures/SFig-10B.rds")
-# saveRDS(p[[3]], fig, compress = FALSE)
+fig <- here("output/figures/SFig-13A.rds")
+saveRDS(p1, fig, compress = FALSE)
+
+fig <- here("output/figures/SFig-13B.rds")
+saveRDS(p2, fig, compress = FALSE)
 ```
 
 Examine what the top 10 ranked gene sets are and how many genes they contain, for each method and comparison.
 
-```{r, fig.height=9, fig.width=6}
+```{r}
 terms <- missMethyl:::.getGO()$idTable
 nGenes <- rownames_to_column(data.frame(n = sapply(missMethyl:::.getGO()$idList, 
                                                    length)), 
                              var = "ID")
 
-dat %>% arrange(contrast, method, P.DE) %>%
+dmrGo %>% filter(method %in% c("goregion-gometh", "gometh-probe-top", 
+                         "gometh-probe-fdr")) %>%
+    mutate(method = unname((dict[method]))) %>% 
+    arrange(contrast, method, P.DE) %>%
     group_by(contrast, method) %>%
     mutate(FDR = p.adjust(P.DE, method = "BH")) %>%
+    mutate(rank = 1:n()) %>%
     filter(rank <= 10) %>% 
     inner_join(terms, by = c("GO" = "GOID")) %>%
     inner_join(nGenes, by = c("GO" = "ID")) -> sub
 ```
 
-```{r, width = 8, height = 5, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE}
 p <- vector("list", length(unique(sub$contrast)))
 for(i in 1:length(p)){
     cont <- sort(unique(sub$contrast))[i]
@@ -599,19 +475,21 @@ for(i in 1:length(p)){
                    col = ifelse(both == 2, "Both", 
                                 ifelse(both == 1 & rna == 1, "RNAseq",
                                        ifelse(both == 1 & isp == 1, 
-                                              "ISP", "Neither")))) -> tmp
+                                              "ISP", "Neither")))) %>%
+        mutate(col = factor(col, 
+                            levels = c("Both", "ISP", "RNAseq", 
+                                       "Neither"))) -> tmp
     
     p[[i]] <- ggplot(tmp, aes(x = -log10(FDR), y = idx, colour = col)) +
         geom_point(aes(size = n), alpha = 0.7) +
         scale_size(limits = c(min(sub$n), max(sub$n))) +
         facet_wrap(vars(method), ncol = 2, scales = "free") +
         scale_y_discrete(labels = setLabs) +
-        scale_color_manual(values = scales::hue_pal()(4)) +
+        scale_color_manual(values = truthPal) +
         labs(y = "", size = "No. genes", colour = "In truth set") +
-        theme(axis.text.y = element_text(size = 6),
-              axis.text.x = element_text(size = 6),
-              legend.box = "horizontal",
+        theme(axis.text = element_text(size = 7),
               legend.margin = margin(0, 0, 0, 0, unit = "lines"),
+              legend.box = "horizontal",
               panel.spacing.x = unit(1, "lines")) +
         coord_cartesian(xlim = c(-log10(0.99), -log10(10^-80))) +
         geom_vline(xintercept = -log10(0.05), linetype = "dashed") +
@@ -621,17 +499,23 @@ for(i in 1:length(p)){
 shift_legend(p[[1]], plot = TRUE, pos = "left")
 shift_legend(p[[2]], plot = TRUE, pos = "left")
 shift_legend(p[[3]], plot = TRUE, pos = "left")
-```
+``` 
 
 ```{r}
-# fig <- here("output/figures/Fig-5D.rds")
-# saveRDS(p[[1]], fig, compress = FALSE)
-# 
-# fig <- here("output/figures/SFig-9C.rds")
-# saveRDS(p[[2]], fig, compress = FALSE)
-# 
-# fig <- here("output/figures/SFig-10C.rds")
-# saveRDS(p[[3]], fig, compress = FALSE)
+fig <- here("output/figures/SFig-13C.rds")
+saveRDS(shift_legend(p[[1]] + theme(plot.title = element_blank()),
+                     pos = "left"), 
+        fig, compress = FALSE)
+
+fig <- here("output/figures/SFig-13D.rds")
+saveRDS(shift_legend(p[[2]] + theme(plot.title = element_blank()),
+                     pos = "left"), 
+        fig, compress = FALSE)
+
+fig <- here("output/figures/SFig-13E.rds")
+saveRDS(shift_legend(p[[3]] + theme(plot.title = element_blank()),
+                     pos = "left"), 
+        fig, compress = FALSE)
 ```
 
 ## Compare characteristics of region-wise and probe-wise results
@@ -709,12 +593,35 @@ dat %>% group_by(contrast, method) %>%
     summarise(prop = sum(!is.na(entrezid[!duplicated(cpgs)]))/
                   length(unique(cpgs))) -> sub
 
-ggplot(sub, aes(x = method, y = prop, fill = method)) +
-    geom_bar(stat = "identity", show.legend = FALSE) +
-    facet_wrap(vars(contrast)) + 
-    labs(y = "Prop. sig. CpGs mapped to genes", x = "Sig. CpGs selected using") + 
-    theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-    scale_fill_manual(values = selectCols)
+p <- vector("list", length(unique(sub$contrast)))
+
+for(i in 1:length(p)){
+    cont <- sort(unique(sub$contrast))[i]
+    p[[i]] <- ggplot(sub[sub$contrast == cont,], 
+                     aes(x = method, y = prop)) +
+        geom_bar(stat = "identity", 
+                 show.legend = FALSE, 
+                 fill="black") +
+        labs(y = "Prop. sig. CpGs mapped to genes", 
+             x = "Sig. CpGs selected using") + 
+        theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+        scale_x_discrete(limits = c("FDR < 0.05", "DMRcate", "Top 5000"))
+}
+
+p[[1]] + ggtitle(sort(unique(sub$contrast))[1]) | 
+    p[[2]] + ggtitle(sort(unique(sub$contrast))[2]) | 
+    p[[3]] + ggtitle(sort(unique(sub$contrast))[3])
+```
+
+```{r}
+fig <- here("output/figures/Fig-5F.rds")
+saveRDS(p[[1]], fig, compress = FALSE)
+
+fig <- here("output/figures/SFig-11E.rds")
+saveRDS(p[[2]], fig, compress = FALSE)
+
+fig <- here("output/figures/SFig-12E.rds")
+saveRDS(p[[3]], fig, compress = FALSE)
 ```
 
 ```{r, fig.height=7, fig.width=6}
@@ -730,8 +637,7 @@ ggplot(sub, aes(x = group, y = n, fill = method)) +
     facet_wrap(vars(contrast), nrow = 3, ncol = 1, scales = "free_y") + 
     labs(fill = "Sig. CpGs selected using", y = "No. sig. CpGs mapped to genomic features", 
          x = "Feature") + 
-    theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-    scale_fill_manual(values = selectCols)
+    theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
 ## CpG overlap between region-wise and probe-wise approaches
@@ -740,34 +646,70 @@ Compare the CpGs covered by the different approaches, for the three contrasts.
 
 ```{r}
 p <- vector("list", ncol(cont.matrix))
+d <- vector("list", length(p))
 
 for(i in 1:length(p)){
     cont <- sort(colnames(cont.matrix))[i]
-    dat %>% filter(contrast == cont) -> tmp
-    tmp <- split(tmp$cpgs, f = tmp$method)
-    p[[i]] <- upset(fromList(tmp), keep.order = TRUE, sets = sort(names(tmp)), 
-                    sets.bar.color = unname(selectCols[sort(names(tmp))]),
-                    order.by = "freq", 
-                    sets.x.label = "No. significant CpGs")
+    dat %>% filter(contrast == cont) %>%
+        select(-contrast) %>%
+        group_by(cpgs) %>%
+        summarize(meth = list(method)) %>%
+        ggplot(aes(x = meth)) +
+        geom_bar() +
+        labs(y = "Intersection size", x = "") +
+        scale_x_upset() +
+        theme(axis.title.y = element_text(size = 10)) -> int
     
+    dat %>% filter(contrast == cont) %>%
+        group_by(contrast, method) %>% 
+        tally() %>%
+        ggplot(aes(x = method, y = n)) +
+        geom_col(fill="black", position = "dodge") +
+        geom_text(aes(label = n),
+                  position = position_dodge(0.9),
+                  size = 1.5, hjust = 1.1, vjust = 0.5) +
+        labs(y = "Set size") +
+        scale_x_discrete(position = "top",
+                         limits = c("Top 5000", "DMRcate", "FDR < 0.05")) +
+        scale_y_reverse(labels = scales::format_format(big.mark = " ", 
+                                                       decimal.mark = ".", 
+                                                       scientific = FALSE, 
+                                                       digits = 0),
+                        expand = expansion(mult = c(0.6, 0))) +
+        coord_flip() +
+        theme_minimal() +
+        theme(legend.position = "none",
+              axis.title.y = element_blank(),
+              axis.title.x = element_text(size = 8),
+              axis.text.x = element_blank(),
+              axis.text.y = element_blank(),
+              panel.grid = element_blank(),
+              plot.margin = margin(0, 0, 0, 0,"cm")) -> sets
+    
+    p[[i]] <- ggarrange(ggarrange(plotlist = list(NULL, sets, NULL), 
+                                  nrow = 3, heights = c(2.5, 1, 0.1)), int, 
+                        ncol = 2,
+                        widths = c(1, 3.5))
+    d[[i]] <- ggarrange(ggarrange(plotlist = list(NULL, sets, NULL), 
+                                  nrow = 3, heights = c(4.75, 1, 0.1)), int, 
+                        ncol = 2,
+                        widths = c(1, 3.5))
+        
 }
 
-p[[1]]
-grid.text(sort(colnames(cont.matrix))[1],x = 0.65, y=0.95, gp=gpar(fontsize=16))
-p[[2]]
-grid.text(sort(colnames(cont.matrix))[2],x = 0.65, y=0.95, gp=gpar(fontsize=16))
-p[[3]]
-grid.text(sort(colnames(cont.matrix))[3],x = 0.65, y=0.95, gp=gpar(fontsize=16))
+d[[1]] 
+d[[2]]
+d[[3]] 
 ```
 
 ```{r}
 fig <- here("output/figures/Fig-5E.rds")
 saveRDS(p[[1]], fig, compress = FALSE)
 
-fig <- here("output/figures/SFig-9D.rds")
+fig <- here("output/figures/SFig-11D.rds")
 saveRDS(p[[2]], fig, compress = FALSE)
 
-fig <- here("output/figures/SFig-10D.rds")
+fig <- here("output/figures/SFig-12D.rds")
 saveRDS(p[[3]], fig, compress = FALSE)
 ```
 
@@ -777,38 +719,76 @@ Compare the genes covered by the different approaches, for the three contrasts.
 
 ```{r}
 p <- vector("list", ncol(cont.matrix))
+d <- vector("list", length(p))
 
 for(i in 1:length(p)){
     cont <- sort(colnames(cont.matrix))[i]
     dat %>% filter(contrast == cont) %>%
-        left_join(flatAnn, by = c("cpgs" = "cpg")) %>% 
+        left_join(flatAnn, by = c("cpgs" = "cpg")) %>%
         dplyr::select(method, entrezid) %>%
-        distinct() -> tmp
-
-    tmp <- split(tmp$entrezid, f = tmp$method)
-    p[[i]] <- upset(fromList(tmp), keep.order = TRUE, sets = sort(names(tmp)), 
-                    sets.bar.color = unname(selectCols[sort(names(tmp))]),
-                    order.by = "freq", 
-                    sets.x.label = "No. genes with sig. CpGs")
+        distinct() %>%
+        group_by(entrezid) %>%
+        summarize(meth = list(method)) %>%
+        ggplot(aes(x = meth)) +
+        geom_bar() +
+        labs(y = "Intersection size", x = "") +
+        scale_x_upset() +
+        theme(axis.title.y = element_text(size = 10)) -> int
+    
+    dat %>% group_by(contrast, method) %>%
+        inner_join(flatAnn, by = c("cpgs" = "cpg")) %>%
+        group_by(contrast, method) %>%
+        dplyr::select(group_cols(), entrezid) %>%
+        distinct() %>%
+        filter(contrast == cont) %>%
+        tally() %>%
+        ggplot(aes(x = method, y = n)) +
+        geom_col(fill="black", position = "dodge") +
+        geom_text(aes(label = n),
+                  position = position_dodge(0.9),
+                  size = 1.5, hjust = 1.1, vjust = 0.5) +
+        labs(y = "Set size") +
+        scale_x_discrete(position = "top",
+                         limits = c("Top 5000", "DMRcate", "FDR < 0.05")) +
+        scale_y_reverse(labels = scales::format_format(big.mark = " ",
+                                                       decimal.mark = ".",
+                                                       scientific = FALSE,
+                                                       digits = 0),
+                        expand = expansion(mult = c(0.6, 0))) +
+        coord_flip() +
+        theme_minimal() +
+        theme(legend.position = "none",
+              axis.title.y = element_blank(),
+              axis.title.x = element_text(size = 9),
+              axis.text.x = element_blank(),
+              axis.text.y = element_blank(),
+              panel.grid = element_blank(),
+              plot.margin = margin(0, 0, 0, 0,"cm")) -> sets
+    
+    p[[i]] <- ggarrange(ggarrange(plotlist = list(NULL, sets, NULL),
+                                  nrow = 3, heights = c(2.5, 1, 0.1)), int,
+                        ncol = 2,
+                        widths = c(1, 3.5))
+    d[[i]] <- ggarrange(ggarrange(plotlist = list(NULL, sets, NULL),
+                                  nrow = 3, heights = c(4.75, 1, 0.1)), int,
+                        ncol = 2,
+                        widths = c(1, 3.5))
     
 }
 
-p[[1]]
-grid.text(sort(colnames(cont.matrix))[1],x = 0.65, y=0.95, gp=gpar(fontsize=16))
-p[[2]]
-grid.text(sort(colnames(cont.matrix))[2],x = 0.65, y=0.95, gp=gpar(fontsize=16))
-p[[3]]
-grid.text(sort(colnames(cont.matrix))[3],x = 0.65, y=0.95, gp=gpar(fontsize=16))
+d[[1]]
+d[[2]]
+d[[3]]
 ```
 
 ```{r}
-fig <- here("output/figures/Fig-5F.rds")
+fig <- here("output/figures/Fig-5G.rds")
 saveRDS(p[[1]], fig, compress = FALSE)
 
-fig <- here("output/figures/SFig-9E.rds")
+fig <- here("output/figures/SFig-11F.rds")
 saveRDS(p[[2]], fig, compress = FALSE)
 
-fig <- here("output/figures/SFig-10E.rds")
+fig <- here("output/figures/SFig-12F.rds")
 saveRDS(p[[3]], fig, compress = FALSE)
 ```
 
@@ -850,43 +830,41 @@ if(!file.exists(outFile)){
 Examine effect of changing DMR parameter cut offs on gene set rankings of GO categories in "immune system process".
 
 ```{r, fig.width=9}
-immuneGO <- unique(read.csv(here("data/GO-immune-system-process.txt"), 
-                            stringsAsFactors = FALSE, header = FALSE, 
-                            col.names = "GOID"))
-
 dmrParams %>% arrange(contrast, params, P.DE) %>%
     group_by(contrast, params) %>%
     mutate(csum = cumsum(GO %in% immuneGO$GOID)) %>%
     mutate(rank = 1:n()) %>%
     filter(rank <= 100) -> dat
 
-p <- ggplot(dat, aes(x = rank, y = csum, colour = params)) +
+p1 <- ggplot(dat, aes(x = rank, y = csum, colour = params)) +
     geom_line() +
     facet_wrap(vars(contrast), ncol=3) +
     geom_vline(xintercept = 10, linetype = "dotted") +
     labs(colour = "Parameters", x = "Rank", y = "Cumulative no. immune sets")
-p
+p1
 ```
 
 Examine effect of changing DMR parameter cut offs on gene set rankings on GO categories derived from RNAseq analysis.  
 
 ```{r, fig.width=9}
-immuneGO <- readRDS(here("data/RNAseq-GO.rds"))
-immuneGO %>% group_by(contrast) %>%
-    mutate(rank = 1:n()) %>%
-    filter(rank <= 100) -> topSets
-    
 dmrParams %>% arrange(contrast, params, P.DE) %>%
     group_by(contrast, params) %>%
-    mutate(csum = cumsum(GO %in% topSets$ID[topSets$contrast %in% contrast])) %>%
+    mutate(csum = cumsum(GO %in% topGOSets$ID[topGOSets$contrast %in% contrast])) %>%
     mutate(rank = 1:n()) %>%
     filter(rank <= 100) -> sub
 
-p <- ggplot(sub, aes(x = rank, y = csum, colour = params)) +
+p2 <- ggplot(sub, aes(x = rank, y = csum, colour = params)) +
     geom_line() +
     facet_wrap(vars(contrast), ncol=3) +
     geom_vline(xintercept = 10, linetype = "dotted") +
     labs(colour = "Parameters", x = "Rank", 
          y = glue("Cumulative no. RNAseq sets"))
-p
+p2
+```
+```{r}
+fig <- here("output/figures/SFig-14A.rds")
+saveRDS(p1, fig, compress = FALSE)
+
+fig <- here("output/figures/SFig-14B.rds")
+saveRDS(p2, fig, compress = FALSE)
 ```
